8226800: [lworld][c1] SharedRuntime::fixup_callers_callsite is wrong when caller is C1

Reviewed-by: thartmann